chamber/styles/larger.css
@media screen and (min-width: 55rem) {
    body{
        margin: auto;
    }
    header{
        font-size: 1.5rem;
    }
    
    #menu{
        display: none;
    }
    nav{
        display: flex;
        justify-content: space-around;
    }

    ul.navigation, ul.navigation.open{
        display: flex;       
    }

    ul.navigation li{
        margin: 0 20px;
        border: none;
    }

    nav ul li a {
        padding: 10px;
        font-weight: 700;  
        font-size: 1.2rem;
    }

    .hero-message{
        position: absolute;
        width: 100%;
        margin-left: 50px;
        margin-top: 50px;
        font-size: 2rem;
        background-color: #353535;
        color: #FFFFFF;
        text-align: center;
        opacity: .9;
        border-radius: 10px;
    }
    .top-cards{
        display: grid;
        grid-template-columns: 2fr 1.5fr;
        column-gap: 10px;  
    }
    .small-cards{
        border-bottom: none;
    }

    .business-cards{
        margin-top: -125px;
        margin-left: 650px;
    }
    

    .next-content{
        display: flex;
        flex-wrap: wrap-reverse;
        background-color:#3C6E71;
        color:#D9D9D9;
        margin: 15px auto;
        border-radius: 5px;
        width: 90%;
        align-items: center;
        justify-content:space-evenly;
    }
    .next-event img{
        width: 100%;
        height: auto;
    }

    .weather{
        width: 70%;
    }

    .community-cards, .events-cards{
        display: flex;  
        align-items: center; 
        justify-content: center;
    }
    .community-card, .event-card{
        width: 25%;
        height: auto;
    }
    .pictures{
        grid-row: 1/18;
        grid-column: 2/3;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    .pictures img{
        width: 100%;
    }
    .pictures img:hover{
        filter: contrast(50%);
    }   
}

@media screen and (min-width: 70rem) {
    .hero-message{
        position: absolute;
        top: 45%;
        width: 60%;
        font-size: 2.5rem;
    }
}

